--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" class="css">
 </head>
 <body> 
+    <h1 id="title">Calculator</h1>
     <div class="container">
       
         <div class="calculator">
@@ -46,5 +47,9 @@
     </div>
 
     <script src="script.js"></script>
+    <footer>
+        Made by ❤️ Ravi .
+      </footer>
+
 </body>
 </html>
